# api/running_api.py
@@ -1,6 +1,7 @@
 from flask_restful import Resource, reqparse, abort, marshal_with, fields
 from sqlalchemy.exc import NoResultFound
 
+from api.theater_api import abort_if_theatre_doesnt_exist
 from application.database import db_session
 from application.models import Running
 
@@ -9,7 +10,7 @@ def abort_if_running_doesnt_exist(rid):
     try:
         Running.query.filter_by(id=rid).one()
     except NoResultFound as e:
-        abort(404, message="Theatre with ID: {} doesn't exist".format(rid))
+        abort(404, "Running with ID: {} doesn't exist")
 
 
 parser = reqparse.RequestParser()  # for GET, DELETE requests
@@ -19,13 +20,24 @@ parser2 = reqparse.RequestParser()  # for POST, PUT  requests
 parser2.add_argument('id', required=False, type=int)
 parser2.add_argument('theatre_id', required=True, type=int)
 parser2.add_argument('show_id', required=True, type=int)
-parser2.add_argument('date', required=False, type=str)
+parser2.add_argument('show_name', required=False, type=str)
+parser2.add_argument('start', required=False, type=str)
+parser2.add_argument('end', required=False, type=str)
+parser2.add_argument('language', required=False, type=str)
+parser2.add_argument('format', required=False, type=str)
+parser2.add_argument('ticket_price', required=False, type=str)
 
 resource_fields = {
     'id': fields.Integer,
     'theatre_id': fields.Integer,
     'show_id': fields.Integer,
-    'date': fields.DateTime
+    'show_name': fields.String,
+    'start': fields.String,
+    'end': fields.String,
+    'language': fields.String,
+    'format': fields.String,
+    'ticket_price': fields.String,
+
 }
 
 
@@ -34,21 +46,28 @@ class RunningAPI(Resource):
     def get(self):
         # // get all runnings
         # // return all runnings
-        rid = parser.parse_args()['id']
-        abort_if_running_doesnt_exist(rid)
-        if rid:
-            stmt = Running.query.filter_by(id=rid)
-            return stmt.one()
+        tid = parser.parse_args()['id']
+        abort_if_theatre_doesnt_exist(tid)
+        if tid:
+            stmt = Running.query.filter_by(theatre_id=tid).all()
+        return [x.as_dict() for x in stmt]
 
     @marshal_with(resource_fields)
     def post(self):
         # // add running to database
         # // return running id
         args = parser2.parse_args()
+        print(args)
         running = Running(
             theatre_id=args['theatre_id'],
             show_id=args['show_id'],
-            date=args['date'])
+            show_name=args['show_name'],
+            start=args['start'],
+            end=args['end'],
+            language=args['language'],
+            format=args['format'],
+            ticket_price=args['ticket_price']
+        )
         db_session.add(running)
         db_session.commit()
         return running
